--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
                 <h2>Bi-weekly Update</h2>
                 <h5>Sep 15, 2019</h5>
                 <p>
-                    1. Went through AIBO Programming Tutorial at https://www.cc.gatech.edu/~tucker/courses/amrs/aibo/AIBOProgrammingTutorial.pdf
+                    1. Found out that Sony was supposed to relase its open API for the latest Aibo ERS-1000 in August according to https://spectrum.ieee.org/automaton/robotics/home-robots/sony-upgrading-aibo-with-new-home-security-features-api-access
+                    <br>
+                    But there isn't any API released by Sony as of Sep 16, 2019, so Dr. Young suggested to program the old Aibo ERS-7 first.
+                    <br>
+                    2. Went through AIBO Programming Tutorial at https://www.cc.gatech.edu/~tucker/courses/amrs/aibo/AIBOProgrammingTutorial.pdf
                     <br>
                     Learned about OPENR objects and their communication mechanism
                     <br>
-                    2. Read the general overview of the Aibo software development environment on Aibo wikipedia page at https://en.wikipedia.org/wiki/AIBO#Software
+                    3. Read the general overview of the Aibo software development environment on Aibo wikipedia page at https://en.wikipedia.org/wiki/AIBO#Software
                     <br>
                     Knew that the two main ways of programming Aibo are: OPEN-R SDK and R-CODE and R-CODE plus
                 </p>
