--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
                 <h2>Bi-weekly Update</h2>
                 <h5>Sep 15, 2019</h5>
                 <p>
-                    1. Found out that Sony was supposed to relase its open API for the latest Aibo ERS-1000 in August according to https://spectrum.ieee.org/automaton/robotics/home-robots/sony-upgrading-aibo-with-new-home-security-features-api-access
+                    1. Found out that Sony was supposed to release its open API for the latest Aibo ERS-1000 in August according to https://spectrum.ieee.org/automaton/robotics/home-robots/sony-upgrading-aibo-with-new-home-security-features-api-access
                     <br>
                     But there isn't any API released by Sony as of Sep 16, 2019, so Dr. Young suggested to program the old Aibo ERS-7 first.
+                    <br>
+                    I also sent a email to Sony regarding when the API will come out, and haven't got a response yet.
                     <br>
                     2. Went through AIBO Programming Tutorial at https://www.cc.gatech.edu/~tucker/courses/amrs/aibo/AIBOProgrammingTutorial.pdf
                     <br>
