--- a/index.html
+++ b/index.html
@@ -15,14 +15,35 @@
     <div class="row">
         <div>
             <div class="card">
-                <h2>Bi-weekly Update</h2>
-                <h5>Sep 15, 2019</h5>
+                <h2>Weekly Update</h2>
+                <h5>Sep 25, 2019</h5>
+                <p>
+                    1. Went through AIBO Programming Tutorial at http://aibostuff.iofreak.com/wiki.php?n=Aibo.Development
+                    <br>
+                    Familiarized myself with R-CODE syntax and some sample programs.
+                    <br>
+                    2. Found out that Sony postponed its open API release to Fall 2019 according to https://prtimes.jp/main/html/rd/p/000000044.000024857.html
+                    <br>
+                    Dr. Jim Young is reaching out to his connections to find out when exactly the open API will be released.
+                    <br>
+                    3. Was recommended by Dr. JIm Young to look into a programming framework called "Tekkotsu".
+                    <br>
+                    Started to look into its manual at http://www.tekkotsu.org/about.html
+                    <br>
+                    4. Found that the pink memory stick is on sale at https://www.ebay.ca/itm/Rare-SONY-16MB-Memory-Stick-AIBO-ERA-MS016-NEW-SEALED/383107582403?hash=item5932fdc9c3:g:-nUAAOSwjW5dV4-x
+                    <br>
+                    The pink memory stick is required for programming the old Aibo
+                </p>
+            </div>
+            <div class="card">
+                <h2>Weekly Update</h2>
+                <h5>Sep 17, 2019</h5>
                 <p>
                     1. Found out that Sony was supposed to release its open API for the latest Aibo ERS-1000 in August according to https://spectrum.ieee.org/automaton/robotics/home-robots/sony-upgrading-aibo-with-new-home-security-features-api-access
                     <br>
-                    But there isn't any API released by Sony as of Sep 16, 2019, so Dr. Young suggested to program the old Aibo ERS-7 first.
+                    But there isn't any API released by Sony as of Sep 17, 2019, so Dr. Young suggested to program the old Aibo ERS-7 first.
                     <br>
-                    I also sent a email to Sony regarding when the API will come out, and haven't got a response yet.
+                    I also sent an email to Sony regarding when the API will come out, and haven't got a response yet.
                     <br>
                     2. Went through AIBO Programming Tutorial at https://www.cc.gatech.edu/~tucker/courses/amrs/aibo/AIBOProgrammingTutorial.pdf
                     <br>
@@ -30,7 +51,11 @@
                     <br>
                     3. Read the general overview of the Aibo software development environment on Aibo wikipedia page at https://en.wikipedia.org/wiki/AIBO#Software
                     <br>
-                    Knew that the two main ways of programming Aibo are: OPEN-R SDK and R-CODE and R-CODE plus
+                    Found out that the three main ways of programming Aibo are: OPEN-R SDK, R-CODE, and AIBO remote framework.
+                    <br>
+                    4. Compared different software development environments from http://aibostuff.iofreak.com/wiki.php?n=Aibo.Development
+                    <br>
+                    Started look into R-CODE syntax since it is high-level and easy to grasp.
                 </p>
             </div>
             <hr>
