--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
                     <br>
                     4. Found that the pink memory stick is on sale at https://www.ebay.ca/itm/Rare-SONY-16MB-Memory-Stick-AIBO-ERA-MS016-NEW-SEALED/383107582403?hash=item5932fdc9c3:g:-nUAAOSwjW5dV4-x
                     <br>
-                    The pink memory stick is required for programming the old Aibo
+                    The pink memory stick is required for programming the old Aibo. Already messaged Dr. Young about it.
                 </p>
             </div>
+            <hr>
             <div class="card">
                 <h2>Weekly Update</h2>
                 <h5>Sep 17, 2019</h5>
