--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head>
+﻿<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,6 +14,31 @@
     </div>    
     <div class="row">
         <div>
+		    <div class="card">
+                <h2>Bi-Weekly Update</h2>
+                <h5>Oct 12, 2019</h5>
+                <p>
+                  1. Looked into the old AIBO Programming Framework "Tekkotsu" at http://www.tekkotsu.org/ArchitecturalOverview.html
+                  <br>
+                  Familiarized myself with its high-level architecture, user interface, and syntax.
+                  <br>
+                  2. Master student Rahatul Amin who work with me on this project sent an inquiry about the API release to Sony Japan.
+                  <br>
+                  Sony responded that its open API is scheduled to be released in November 2019.
+                  <br>
+                  3. Found out that the existing tool My Aibo app could potentially give us some control over Aibo.
+                  <br>
+                  Asked for the particular account associated with the robot in order to log in. Explored what we can do with the app.
+                  Functions like viewing photo taken by Aibo and patroling could be relevant to our study.
+                  <br>
+                  4. Start to set up the programming environment for running Tekkotsu
+                  <br>
+                  Installed Ubuntu 14.04 LTS following the instructions at http://wiki.tekkotsu.org/index.php/Install_instructions
+                  <br>
+                  Downloaded the latest version of Tekkotsu using CVS (Concurrent Versions System).
+                </p>
+            </div>
+            <hr>
             <div class="card">
                 <h2>Weekly Update</h2>
                 <h5>Sep 25, 2019</h5>
