--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                   Installed Ubuntu 14.04 LTS following the instructions at http://wiki.tekkotsu.org/index.php/Install_instructions
                   <br>
                   Downloaded the latest version of Tekkotsu using CVS (Concurrent Versions System).
+                  <br>
+                  Found out my computer doesn't have enough space for installing an operating system alongside Windows 10.
+                  (After I installed it, there's only 600 MB allocated for the system.) I told Dr. Young about it and he has asked Jeff Durston if we could get a computer from school.
                 </p>
             </div>
             <hr>
