--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                   <br>
                   Found out my computer doesn't have enough space for installing an operating system alongside Windows 10.
                   (After I installed it, there's only 600 MB allocated for the system.) I told Dr. Young about it and he has asked Jeff Durston if we could get a computer from school.
+                  <br>
+                  I have found a way to install Ubuntu on a 16GB flash drive. That gives me enough room for now so that I should be able to continue with my framework setup.
+                  <br>
+                  Dr. Jim emailed me back saying he would recommend use a virtual machine instead to install Ubuntu.
                 </p>
             </div>
             <hr>
