--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
             <br>
             4. Start to set up Tekkotsu and its dependencies.
             <br>
-            Downloaded the latest version of Tekkotsu using CVS (Concurrent Versions System).
+            Downloaded and installed the latest version of Tekkotsu using CVS (Concurrent Versions System).
+            <br>
+            Installed Open-R SDK as a dependency of Tekkotsu.
+            <br>
+            Since I don't have a physical robot to run the Tekkotsu program on, I also set up Mirage which is a virtual environment for hosting agents and its dependency.
           </p>
         </div>
         <div class="card">
