--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             Installed Open-R SDK as a dependency of Tekkotsu.
             <br>
             Since I don't have a physical robot to run the Tekkotsu program on, I also set up Mirage which is a virtual environment for hosting agents and its dependency.
+            <br>
+            Some links to the dependencies are invalid since the framework hasn't been updated since 2010
           </p>
         </div>
         <div class="card">
