--- a/index.html
+++ b/index.html
@@ -32,15 +32,20 @@
             <br>
             Learned how to edit text files with vim, how to run programs with the security privileges.
             <br>
-            4. Start to set up Tekkotsu and its dependencies.
+            3. Start to set up Tekkotsu and its dependencies.
             <br>
             Downloaded and installed the latest version of Tekkotsu using CVS (Concurrent Versions System).
             <br>
-            Installed Open-R SDK as a dependency of Tekkotsu.
+            Installed Open-R SDK as a dependency of Tekkotsu. One of the dependency was too new. I had to downgrade it.
             <br>
-            Since I don't have a physical robot to run the Tekkotsu program on, I also set up Mirage which is a virtual environment for hosting agents and its dependency.
+            4.Since I don't have a physical robot to run the Tekkotsu program on, I also try to set up Mirage which is a virtual environment for hosting agents and its dependency.
             <br>
-            Some links to the dependencies are invalid since the framework hasn't been updated since 2010
+            Some links to the dependencies of it are invalid since the framework hasn't been updated since 2010
+            <br>
+            5.Start to create a tutorial for how to set up Tekkotsu.
+            <br>
+            Dr. Jim recommended this because it allows me to document what I have done in detail. 
+            Also since the framework hasn't been updated for ten years, a tutorial will help people set up the framework with ease in the future.
           </p>
         </div>
         <div class="card">
