--- a/index.html
+++ b/index.html
@@ -16,11 +16,22 @@
       <div>
         <div class="card">
           <h2>Bi-Weekly Update</h2>
+          <h5>Nov 6, 2019</h5>
+          <p>
+            <br>
+            After installing Tekkotsu's dependencies. I started to build a simple program following the instructions on http://www.tekkotsu.org/execution.html
+            <br>
+            I encoutered an error saying "cc1plus: error: unrecognized command line option '-std=c++11'",
+            and it turned out that the gcc installed from the tutorial http://www.tekkotsu.org/openr-install.html was too old
+            <br>
+          </p>
+        </div>
+        <div class="card">
+          <h2>Bi-Weekly Update</h2>
           <h5>Oct 23, 2019</h5>
           <p>
-
             <br>
-            Continued look into what the best way is to install Ubuntu 14.04 LTS.
+            1. Continued look into what the best way is to install Ubuntu 14.04 LTS.
             <br>
             I could install Ubuntu on a 16GB flash drive. That gives me enough room for now so that I should be able to continue with my framework setup.
             <br>
@@ -36,7 +47,7 @@
             <br>
             Downloaded and installed the latest version of Tekkotsu using CVS (Concurrent Versions System).
             <br>
-            Installed Open-R SDK as a dependency of Tekkotsu. One of the dependency was too new. I had to downgrade it.
+            Installed Open-R SDK as a dependency of Tekkotsu. One of its dependency 'texinfo' was too new. I had to downgrade it.
             <br>
             4.Since I don't have a physical robot to run the Tekkotsu program on, I also try to set up Mirage which is a virtual environment for hosting agents and its dependency.
             <br>
@@ -44,7 +55,7 @@
             <br>
             5.Start to create a tutorial for how to set up Tekkotsu.
             <br>
-            Dr. Jim recommended this because it allows me to document what I have done in detail. 
+            Dr. Jim recommended this because it allows me to document what I have done in detail.
             Also since the framework hasn't been updated for ten years, a tutorial will help people set up the framework with ease in the future.
           </p>
         </div>
