--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
             After installing Tekkotsu's dependencies. I started to build a simple program following the instructions on http://www.tekkotsu.org/execution.html
             <br>
             I encoutered an error saying "cc1plus: error: unrecognized command line option '-std=c++11'",
-            and it turned out that the gcc installed from the tutorial http://www.tekkotsu.org/openr-install.html was too old
+            and it turned out that the gcc installed from the tutorial http://www.tekkotsu.org/openr-install.html was too old for the latest version of Tekkotsu.
             <br>
+            I realized that the two Tekkotsu setup tutorials on the same website are for two different version of Tekkotsu although it was not explicitly mentioned.
+            <br>
+            I downgraded my Tekkotsu version to 4.0.1. And the program was successfully compiled.
           </p>
         </div>
         <div class="card">
