--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             <br>
             Then I tried to extract OPEN_R_SDK directly from the source code of AIBO+ and compile Tekkotusu program, but it was not successful saying 'missing the header file'
             <br>
+            Since I have successfully compiled a Tekkotsu behaviour program, Dr. Jim ask me to make a disk image of my Ubuntu system.
+            <br>
           </p>
         </div>
         <div class="card">
