--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <br>
             I downgraded my Tekkotsu version to 4.0.1. And the program was successfully compiled.
             <br>
+          </p>
+          <p>
             2. Install Mirage (Mirage is a simulation environment which can host multiple agents in a virtual world.)
             <br>
             The OPEN-R SDK I installed comes with GCC 3.3.6. It only works with Tekkotsu 4.0.1 which doesn't include Mirage in its source code.
@@ -40,16 +42,17 @@
             but the file has been deleted.
             <br>
             Then I tried to extract OPEN_R_SDK directly from the source code of AIBO+ and compile Tekkotusu program, but it was not successful saying 'missing the header file'
+          </p>
+          <p>
+            3. Started to create a image disk of my Ubuntu system
             <br>
             Since I have successfully compiled a Tekkotsu behaviour program, Dr. Jim ask me to make a disk image of my Ubuntu system.
-            <br>
           </p>
         </div>
         <div class="card">
           <h2>Bi-Weekly Update</h2>
           <h5>Oct 23, 2019</h5>
           <p>
-            <br>
             1. Continued look into what the best way is to install Ubuntu 14.04 LTS.
             <br>
             I could install Ubuntu on a 16GB flash drive. That gives me enough room for now so that I should be able to continue with my framework setup.
@@ -59,21 +62,25 @@
             Dr. Jim emailed me back saying he would recommend use a virtual machine.
             <br>
             I installed Ubuntu as a VM using VirtualBox.
-            <br>
+          </p>
+          <p>
             2. Familiarized myself with Linux commands.
             <br>
             Learned how to edit text files with vim, how to run programs with the security privileges.
-            <br>
+          </p>
+          <p>
             3. Start to set up Tekkotsu and its dependencies.
             <br>
             Downloaded and installed the latest version of Tekkotsu using CVS (Concurrent Versions System).
             <br>
             Installed Open-R SDK as a dependency of Tekkotsu. One of its dependency 'texinfo' was too new. I had to downgrade it.
-            <br>
+          </p>
+          <p>
             4.Since I don't have a physical robot to run the Tekkotsu program on, I also try to set up Mirage which is a virtual environment for hosting agents and its dependency.
             <br>
             Some links to the dependencies of it are invalid since the framework hasn't been updated since 2010
-            <br>
+          </p>
+          <p>
             5.Start to create a tutorial for how to set up Tekkotsu.
             <br>
             Dr. Jim recommended this because it allows me to document what I have done in detail.
@@ -87,16 +94,20 @@
             1. Looked into the old AIBO Programming Framework "Tekkotsu" at http://www.tekkotsu.org/ArchitecturalOverview.html
             <br>
             Familiarized myself with its high-level architecture, user interface, and syntax.
-            <br>
+          </p>
+          <p>
             2. Master student Rahatul Amin who work with me on this project sent an inquiry about the API release to Sony Japan.
             <br>
             Sony responded that its open API is scheduled to be released in November 2019.
             <br>
+          </p>
+          <p>
             3. Found out that the existing tool My Aibo app could potentially give us some control over Aibo.
             <br>
             Asked for the particular account associated with the robot in order to log in. Explored what we can do with the app.
             Functions like viewing photo taken by Aibo and patroling could be relevant to our study.
-            <br>
+          </p>
+          <p>
             4. Start to set up the programming environment for running Tekkotsu
             <br>
             Installed Ubuntu 14.04 LTS following the instructions at http://wiki.tekkotsu.org/index.php/Install_instructions
@@ -115,15 +126,18 @@
             1. Went through AIBO Programming Tutorial at http://aibostuff.iofreak.com/wiki.php?n=Aibo.Development
             <br>
             Familiarized myself with R-CODE syntax and some sample programs.
-            <br>
+          </p>
+          <p>
             2. Found out that Sony postponed its open API release to Fall 2019 according to https://prtimes.jp/main/html/rd/p/000000044.000024857.html
             <br>
             Dr. Jim Young is reaching out to his connections to find out when exactly the open API will be released.
-            <br>
+          </p>
+          <p>
             3. Was recommended by Dr. JIm Young to look into a programming framework called "Tekkotsu".
             <br>
             Started to look into its manual at http://www.tekkotsu.org/about.html
-            <br>
+          </p>
+          <p>
             4. Found that the pink memory stick is on sale at https://www.ebay.ca/itm/Rare-SONY-16MB-Memory-Stick-AIBO-ERA-MS016-NEW-SEALED/383107582403?hash=item5932fdc9c3:g:-nUAAOSwjW5dV4-x
             <br>
             The pink memory stick is required for programming the old Aibo. Already messaged Dr. Young about it.
@@ -139,15 +153,18 @@
             But there isn't any API released by Sony as of Sep 17, 2019, so Dr. Young suggested to program the old Aibo ERS-7 first.
             <br>
             I also sent an email to Sony regarding when the API will come out, and haven't got a response yet.
-            <br>
+          </p>
+          <p>
             2. Went through AIBO Programming Tutorial at https://www.cc.gatech.edu/~tucker/courses/amrs/aibo/AIBOProgrammingTutorial.pdf
             <br>
             Learned about OPENR objects and their communication mechanism
-            <br>
+          </p>
+          <p>
             3. Read the general overview of the Aibo software development environment on Aibo wikipedia page at https://en.wikipedia.org/wiki/AIBO#Software
             <br>
             Found out that the three main ways of programming Aibo are: OPEN-R SDK, R-CODE, and AIBO remote framework.
-            <br>
+          </p>
+          <p>
             4. Compared different software development environments from http://aibostuff.iofreak.com/wiki.php?n=Aibo.Development
             <br>
             Started look into R-CODE syntax since it is high-level and easy to grasp.
