--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
           </h4>
           <h4>I. Abstract:</h4>
           Tekkotsu is an application development framework for mobile robots such as AIBO. It's relatively high-level and requires a shallower learning curve when compared to many low-level frameworks.
-          Althought being a easy-to-use tool for many developers to program a robot, it hasn't been maintained or updated since 2010. The project is to produce a tutorial for installing Tekkotusu framework along with its dependency.
+          Althought being a easy-to-use tool for many developers to program robots, it hasn't been maintained or updated since 2010. 
+          The goal is to produce a tutorial on how to install Tekkotusu framework along with its dependency.
+          It also creates a disk image of the system with the framework and its dependencies in place for those who want avoid the hassle of installing on their own.
           <h4>II. Introduction to the topic:</h4>
           Tekkotsu was originally developed for the Sony AIBO robot dog, but now supports many other platforms including Chiara, iRobot Create, HandEye, and Lynxmotion. Many of its dependenciy have , which makes
           In September
