--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
           Familiarized myself with Ubuntu boot partitions and where they are located.
           <br>
           Used command-line utility dd to copy the system into a disk image.
+          <br>
+          Played with 7 zip compression parameters, successfully compressed a 20GB disk image into a 5GB zip.
+          <br>
+          Dr. Jim recommended a technique that writes 0s to the file system in order to yield a better compression rate. I successfully reduced the 5GB zip to 4GB.
+          <br>
+          Dr. Jim asked me to delete some of the irrelevant apps in the system in order to further shrink down the size of the disk image.
+          <br>
         </p>
         <p>
           4. Filled in more content for my tutorial at https://1drv.ms/w/s!Ai2ZTQNOIHLxgelCdKJWL1flp0ORng?e=anKYna
