Add the latest bi-weekly progress to the blog
Added the latest bi-weekly progress from Nov 21-4 to the blog

--- a/index.html
+++ b/index.html
@@ -16,6 +16,39 @@
     <div>
       <div class="card">
         <h2>Bi-Weekly Update</h2>
+        <h5>Dec 4, 2019</h5>
+        <p>
+          1. Tried to minimize the disk image of my Ubuntu system
+          <br>
+          Deleted some unnecessary packages and Ubuntu GUI components and managed to compress the disk image to 2.8 GB
+          <br>
+          Suggested by Dr. Jim to delete the X Window System which is a windowing system for bitmap displays.
+          <br>
+          With PhD student Stela's help, I was able to install Ubuntu Server. It doesn't come with a GUI so I could avoid the hassle of removing GUI. The disk image after cloning was reduced to 8GB.
+          <br>
+          Used 7 zip best compression rate and successfully compressed a 8GB disk image into a 970MB zip.
+          <br>
+          He also recommended writing a script to automate the install process.
+          <br>
+        </p>
+        <p>
+          2. Kept working on my tutorial
+          <br>
+          Realized the tutorial was too general, so I broke it down into two.
+          <br>
+          The first tutorial is how to set up Tekkotsu: https://1drv.ms/w/s!Ai2ZTQNOIHLxgesJBm0uHW6LdV6obg?e=eKm20c
+          <br>
+          The second is how to backup your ubuntu system and create a disk image: https://1drv.ms/w/s!Ai2ZTQNOIHLxgelCVkM4xN2dWsxNoQ?e=b01Gbw
+          <br>
+        </p>
+        <p>
+          3. Added a ReadMe.md for how to set up Tekkotsu with a script 
+          <br>
+        </p>
+      </div>
+      <hr>
+      <div class="card">
+        <h2>Bi-Weekly Update</h2>
         <h5>Nov 20, 2019</h5>
         <p>
           1. Archive the the Tekkotsu website at http://www.tekkotsu.org/index.html and http://wiki.tekkotsu.org/index.php/Main_Page
@@ -188,7 +221,6 @@
         <p>
           1. Found out that Sony was supposed to release its open API for the latest Aibo ERS-1000 in August according to https://spectrum.ieee.org/automaton/robotics/home-robots/sony-upgrading-aibo-with-new-home-security-features-api-access
           <br>
-          But there isn't any API released by Sony as of Sep 17, 2019, so Dr. Young suggested to program the old Aibo ERS-7 first.
           <br>
           I also sent an email to Sony regarding when the API will come out, and haven't got a response yet.
         </p>
