--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
           <br>
           Used 7 zip best compression rate and successfully compressed a 8GB disk image into a 970MB zip.
           <br>
-          He also recommended writing a script to automate the install process.
+          He also recommended writing a script to automate the installing process. So I created a script and included it in the project folder.
           <br>
+          I realized the vwdk file which is a system backup file created by VMware virtual machine software is a lot smaller than the one created by another virtual machine software VirtualBox
+          <br>
+          I'm trying to find a way to further comnpress the backup file by using the backup file created by VMware
         </p>
         <p>
           2. Kept working on my tutorial
@@ -59,8 +62,6 @@
           2. Created a shared folder between the host OS Windows 10 and guest OS Ubuntu 14.04 LTS
           <br>
           Followed the instructions at https://www.slothparadise.com/create-shared-folder-virtualbox/ to create a shared folder.
-          <br>
-          Found out the step 2 to 4 can be eliminated by simply installing the Guest Additions with Ubuntu's Advanced Packaging Tool (APT)
         </p>
         <p>
           3. Started to create a disk image of my Ubuntu system
@@ -246,19 +247,18 @@
         <h5>November 9, 2019</h5>
         <p>
           <h4>
-            <center>
-              COMP 4520 – Undergraduate Honours Project Proposal
-              <br>
-              Program
-              <br>
-              Zhikan Xu
-              <br>
-              Supervisor: James E. Young
-            </center>
+            COMP 4520 – Undergraduate Honours Project Proposal
+            <br>
+            Program
+            <br>
+            Zhikan Xu
+            <br>
+            Supervisor: James E. Young
           </h4>
           <h4>I. Abstract:</h4>
-          Tekkotsu is an application development framework for mobile robots such as AIBO. It's relatively high-level and requires a shallower learning curve when compared to many low-level frameworks.
-          Althought being a easy-to-use tool for many developers to program robots, it hasn't been maintained or updated since 2010.
+          AIBO is a series of robot dogs created by Sony. It was first introduced in 1999. And it has evo
+          Tekkotsu is an application development framework for a series of mobile robots such as AIBO. It's relatively high-level and requires a shallower learning curve when compared to many low-level frameworks available to AIBO programmers.
+          Although being a easy-to-use tool for many developers to program robots, it hasn't been maintained or updated since 2010.
           The goal is to produce a tutorial on how to install Tekkotusu framework along with its dependency as well as to create a disk image of the operating system with the framework and its dependencies in place for those who want avoid the hassle of installing on their own.
           <h4>II. Introduction to the topic:</h4>
           Tekkotsu was originally developed for the Sony AIBO robot dog, but now supports many other platforms including Chiara, iRobot Create, HandEye, and Lynxmotion.
@@ -266,8 +266,7 @@
           A working version of the system could be beneficial to future developers.
           <h4>III. Your background preparation to do this project:</h4>
           I completed Software Engineering I, II, and three co-op work terms, which give me decent experience of building software and troubleshoot .
-          My previous summer research term immersed me in a research environment and equipped me
-          with better problem-solving skills.
+          My previous summer research term immersed me in a research environment and equipped me with better problem-solving skills.
           <h4>IV. Related work:</h4>
           A Dog Tail Interface for Communicating Affective States of Utility Robots by Ashish Singh.
           Adapting the Laban Effort System to Design Affect-Communicating Locomotion Path for a
